--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="../CSS/reset.css" />
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/responsive.css" />
+    <script defer src="../JS/script.js"></script>
   </head>
   <body>
     <header class="header">
+      <div class="modal hidden">
+        <button class="close-modal">&times;</button>
+        <h3 class="modal__title">I'm a modal window 😍</h3>
+      </div>
+      <div class="overlay hidden"></div>
       <nav class="nav">
         <div class="logo-container">
-          <img class="website-logo" src="../assets/logo.svg" alt="logo" />
+          <a href="#" class="ss"
+            ><img class="website-logo" src="../assets/logo.svg" alt="logo"
+          /></a>
         </div>
         <ul class="nav-link">
           <li>
@@ -32,7 +40,7 @@
         <div class="signup blue-primary__border resetMargin">
           <ul class="signup-ul">
             <li>
-              <a href="#" class="nav-links__signup">Sign Up</a>
+              <a href="#" class="nav-links__signup signup__btn">Sign Up</a>
             </li>
           </ul>
         </div>
@@ -70,7 +78,7 @@
         </div>
       </div>
     </header>
-    <section class="section sectionWidth">
+    <section class="section sectionWidth" id="section">
       <div class="section-titles">
         <h2 class="h2">Work better together</h2>
         <p class="section-p">
