Added handle hower

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,7 +37,7 @@
             <a href="#" class="nav-links resetMargin">Contact</a>
           </li>
         </ul>
-        <div class="signup blue-primary__border resetMargin">
+        <div class="signup blue-primary__border resetMargin signupBtn">
           <ul class="signup-ul">
             <li>
               <a href="#" class="nav-links__signup signup__btn">Sign Up</a>
